crates/glyph-cli/tests/corpus/invalid/imports/aliased_value_lib.glyph
export type Summary = <"a short summary">

export block mode_name() -> Summary
    description: "Returns a name."
    flow:
        return <"x">
